[views][1.0] Make Index Page
